# airbyte

airbyte-integrations/connectors/source-app-store-connect/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-app-store-connect/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-app-store-connect/sample_files/: config.json
airbyte-integrations/connectors/source-app-store-connect/source_app_store_connect/: __init__.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-app-store-connect/source_app_store_connect/schemas/: apps.json  customer_reviews.json
airbyte-integrations/connectors/source-app-store-connect/unit_tests/integration/: test_customer_reviews.py
docs/integrations/sources/: app-store-connect.md
